# recsys-core

./: .gitignore  README.md  app.py  data.py  pyproject.toml  recsys_data_models.mermaid  recsys_data_models_v2.mermaid
data/patients/: P001.json  P002.json
data/protocols/: PR10.json  PR200.json  PR201.json  PR202.json  PR203.json  PR204.json  PR205.json  PR206.json  PR208.json  PR209.json  PR210.json  PR211.json  PR214.json  PR215.json  PR216.json  PR217.json  PR219.json  PR220.json  PR221.json  PR222.json  PR223.json  PR224.json  PR225.json  PR226.json  PR227.json  PR228.json  PR229.json  PR230.json  PR231.json  PR232.json  PR233.json
data/sessions/: S001.json
models/: __init__.py  patient.py  protocol.py  session.py
notebooks/: ingest.ipynb  ingest_db.ipynb
services/: data_db.py  data_service.py  scoring.py
tests/: test_scoring.py
utils/: __init__.py  clinical_scores.py  config.py  mock_data.py  mock_sessions.py  simulation.py
